beginning and package

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf­8">
     <title></title>
-
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-<my-app>Loading...</my-app>
+<bookmark-app>Loading...</bookmark-app>
 </body>
 </html>
