--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf­8">
     <title></title>
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 <bookmark-app>Loading...</bookmark-app>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
